test/scc_test/stmt/semantic-errors/033.t
void test()
{
	struct { int x; } a;
    if (1)
        ;
    else if (a)
        ;
}